# EGE2D-GUI-OLD

./: CMakeLists.txt  EGE2D-fedora-dependencies list.txt  EGE2D-ubuntu16.04-dependencies list.txt  cleanall.sh  cmakex.sh  install-emscripten.sh  install.sh  readme.1st  toolchain-clang.cmake  toolchain-emscripten.cmake  toolchain-gnu.cmake
emscripten/: __EmccMakeHtml.sh  library_websockets.js  shell.html
libssrc/: CMakeLists.txt
libssrc/ege2d/: CMakeLists.txt  EGE2d-freetype.cpp  EGE2d-freetype.h  EGE2dComposition.cpp  EGE2dComposition.h  EGE2dDisplay.cpp  EGE2dDisplay.h  EGE2dFramebuffer.cpp  EGE2dFramebuffer.h  EGE2dTools.cpp  EGE2dTools.h  EGE3dBaseTypes.h  EGE3dErrorHandler.cpp  EGE3dErrorHandler.h  EGE3dGraphicContext.cpp  EGE3dGraphicContext.h  EGE3dOpenGL.h  EGE3dOpenGLInterface.cpp  EGE3dOpenGLInterface.h  EGE3dText.cpp  EGE3dText.h  EGE3dTextures.cpp  EGE3dTextures.h  environment.h
libssrc/egeshare/: CMakeLists.txt
libssrc/egeshare/src/: Composite.cpp  Composite.h  Object.h  egeAction.cpp  egeAction.h  egeConfig.cpp  egeConfig.h  egeDebug.h  egeEmscriptenMouse.cpp  egeEmscriptenMouse.h  egeSocket.cpp  egeSocket.h
libssrc/others/: CMakeLists.txt  readme1st-installation.txt
libssrc/others/freetype2-NewCMakeLists/: CMakeLists.txt  readme
libssrc/others/jpeg/: CMakeLists.txt  Makefile
samples/: readme
samples/scadatank/: CMakeLists.txt  emscripten_BuildHtmlApp.sh  main.cpp
samples/tutorials/tutorial-01/: CMakeLists.txt  main.cpp
samples/tutorials/tutorial-02/: CMakeLists.txt  main.cpp
samples/tutorials/tutorial-03/: CMakeLists.txt  main.cpp
